--- a/views/header.ejs
+++ b/views/header.ejs
@@ -18,6 +18,10 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/compose">Post</a>
                 </li>
+                <li class="nav-item">
+                 <a class="nav-link" href="/logout" >Logout</a>
+                </li>
+                
               </ul>
         </div>
     </nav>
