Add Google authentication

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,7 +3,7 @@
 </body>
 <footer>
     <div class="footer">
-        <p> kunal from App bruawary❤</p>
+        <p>⭐--------kunal from App bruawary--------⭐</p>
     </div>
 </footer>
 </html>
