--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
           <p>Sing in using social media.</p>
           </div>
          <div class="social-media">
-            <a href="" class="social-link">
+            <a href="/auth/google" class="social-link">
                 <i class="fab fa-google"></i>
             </a>
 
